layout bug hotfixes

--- a/styles/main.sass
+++ b/styles/main.sass
@@ -69,6 +69,8 @@ html, body
 
   #placeholder
     margin-top: 35px
+    position: relative
+    display: block
 
   #placeholder > .course
     display: grid
@@ -79,7 +81,7 @@ html, body
     align-items: center
     margin-bottom: 35px
     position: relative
-    z-index: -100
+    // overflow: auto
 
     i 
       vertical-align: middle
@@ -441,8 +443,10 @@ main
         cursor: pointer
 
     .course-update
+      display: block
       position: absolute
-      top: 55px
+      top: 0
+      left: 0
       width: 100%
       height: 100%
       background: #fff
